# gridiot

./: Makefile  README.md  app.py  load.py  pyproject.toml  schema.yaml
src/gridiot/: __main__.py  fetch.py  query.py  schemas.py
